updated service file, added request files and updated swagger documentation
