# routes/api.php
@@ -22,14 +22,10 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 //had to comment out ->prefix('api) from RouteServiceProvider class
 Route::prefix('/')->controller(SignalController::class)->group(function () {
     Route::post('/register', 'register')->name('register');
+    Route::post('/verify', 'verify')->name('verify');
     Route::get('/unregister', 'unregister')->name('unregister');
     Route::get('version', 'version')->name('version');
-    Route::get('verify/{code}', 'verify')->name('verify');
     Route::get('receive', 'receive')->name('receive');
     Route::post('sendmessage', 'sendmessage')->name('sendmessage');
-    // Route::get('/', 'index')->name('showArticles');
-    // Route::get('/{id}', 'show')->name('singleArticle');
-    // Route::post('/{id}/comment', 'comment')->name('addComment');
-    // Route::get('/{id}/like', 'like')->name('addLike');
-    // Route::get('/{id}/view', 'view')->name('addView');
+    Route::post('profilename', 'profilename')->name('profilename');
 });
